# CarOrama

./: .gitattributes  .gitignore  CarOrama.sln  Directory.Build.props  README.md
.github/workflows/: ci.yml
config/: imitation-all-camera-pilot.json  imitation-baseline.json  imitation-generalization-long.json  imitation-generalization-optimized.json  imitation-generalization-workers.json  scenario-splits-generalization.json  scenario-splits-long-training.json  scenario-splits-quality-gate.json  scenario-splits.json
docs/: architecture.md  dataset-format.md  extending.md  implementation-plan.md  validation.md
ml/: pyproject.toml
ml/src/carorama_ml/: __init__.py  config.py  dataset.py  evaluate.py  metrics.py  model.py  runtime.py  train.py
ml/tests/: test_dataset.py  test_model.py
scripts/: evaluate-imitation.ps1  keep-training-awake.ps1  record-dataset.ps1  record-dataset.sh  run-optimized-training.ps1  run-randomized-training.ps1  setup-ml.ps1  train-imitation.ps1  validate.ps1  validate.sh
src/CarOrama.Core/: CarOrama.Core.csproj
src/CarOrama.Core/Control/: IVehicleCommandSource.cs  IVehicleLightingCommandSource.cs  PrivilegedRouteFollower.cs  RecoveryPerturbationSchedule.cs  VehicleCommand.cs  VehicleLightingCommand.cs
src/CarOrama.Core/Data/: EpisodeDataRecords.cs  EpisodeDatasetWriter.cs
src/CarOrama.Core/Geometry/: Vector2D.cs
src/CarOrama.Core/Roads/: DrivingRoute.cs  (+9 more)
src/CarOrama.Game/: CarOrama.Game.csproj  project.godot
tests/CarOrama.Core.Tests/: CarOrama.Core.Tests.csproj
tools/CarOrama.Dataset/: CarOrama.Dataset.csproj  Program.cs
(+87 files in other folders)
